[package]
name = "htool"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
image_hasher = "1.0.0"
hex = "0.4.3"
sha256 = "1.0.3"
figment = { version = "0.10.6", features = [ "toml", "env", "yaml", "json" ] }
serde = "1.0.137"
path-absolutize = "3.0.13"
toml = "0.5.9"
anyhow = "1.0"
eframe = { version = "0.19.0", features = [ "wgpu" ] }
egui = { version = "0.19.0", features = [ "color-hex" ] }
rfd = "0.10.0"
egui_extras = "0.19.0"
poll-promise = "0.1.0"
chrono = "0.4.22"
downcast-rs = "1.2.0"
rusqlite = { version = "0.28.0", features = [ "bundled", "blob", "modern_sqlite" ] }
egui-notify = "0.4.4" #{ git = "https://github.com/n00kii/egui-notify.git" }
egui-modal = { git = "https://github.com/n00kii/egui-modal.git"}
once_cell = "1.15.0"
egui-video = { path = "../../egui-video" }
arc-swap = "1.5.1"
arboard = "3.1.0"
mime_guess = "2.0.4"
parking_lot = "0.12.1"
regex = "1.6.0"
lazy_static = "1.4.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
zip = "0.6.3"
tempfile = "3.3.0"
hex_color = "2.0.0"
serde_yaml = "0.9.14"
paste = "1.0.9"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.dev]
opt-level = 3
