[package]
name = "htool"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.dev]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
egui = { version = "0.21.0", features = [ "color-hex" ] }
eframe = { version = "0.21.0", features = [ "wgpu" ] }

egui-notify = "0.6.0"
egui-modal = { git = "https://github.com/n00kii/egui-modal" }
egui-video = { git = "https://github.com/n00kii/egui-video", features = [ "from_bytes" ] }
egui_extras = "0.21.0"
puffin_egui = "0.20.0"

image = "0.24.2"
image_hasher = "1.0.0"
arboard = "3.1.0"
mime_guess = "2.0.4"

hex = "0.4.3"
sha256 = "1.0.3"
chrono = "0.4.22"
downcast-rs = "1.2.0"
once_cell = "1.15.0"
arc-swap = "1.5.1"
rand = "0.8.5"
regex = "1.6.0"

sdl2 = "0.35.2"
serde = "1.0.137"
serde_yaml = "0.9.14"
figment = { version = "0.10.6", features = [ "toml", "env", "yaml", "json" ] }
path-absolutize = "3.0.13"
toml = "0.5.9"
zip = "0.6.3"
tempfile = "3.3.0"
rfd = "0.10.0"

rusqlite = { version = "0.28.0", features = [ "blob", "modern_sqlite", "bundled-sqlcipher-vendored-openssl" ] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"

anyhow = "1.0"
poll-promise = "0.1.0"
parking_lot = "0.12.1"
lazy_static = "1.4.0"
hex_color = "2.0.0"
paste = "1.0.9"
puffin = "0.14.0"
enum-iterator = "1.2.0"
open = "3.2.0"
